--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+     <!-- FONTAWESOME CSS FILE -->
+     <script src="https://kit.fontawesome.com/4eec591c51.js" crossorigin="anonymous"></script>
+   
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
